--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="disabled">Disabled</string>
     <string name="messages_history">Messages history</string>
     <string name="subscribe">Subscribe</string>
+    <string name="loading">Loading...</string>
 </resources>
