--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="messages_history">Messages history</string>
     <string name="subscribe">Subscribe</string>
     <string name="loading">Loading...</string>
+    <string name="close_list_of_messages_history">Close list of messages history</string>
 </resources>
