added stop service button to notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="subscribe">Subscribe</string>
     <string name="loading">Loading...</string>
     <string name="close_list_of_messages_history">Close list of messages history</string>
+    <string name="sms_service_is_running_with_ip">SMS Service is running with IP %1$s:%2$s</string>
+    <string name="sms_service_is_running">SMS Service is running</string>
 </resources>
