--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">sms_modem</string>
-    <string name="colon_port" translatable="false">:%d</string>
     <string name="settings">Settings</string>
     <string name="enable">Turn on</string>
     <string name="disable">Turn off</string>
