added error card if service cant start

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="sms_service_is_running_with_ip">SMS Service is running with IP %1$s:%2$s</string>
     <string name="sms_service_is_running">SMS Service is running</string>
     <string name="network_connection_unavailable">Network connection unavailable</string>
+    <string name="unable_to_create_service_please_change_port_and_try_again">Unable to create service. Please, change PORT and try again!</string>
 </resources>
