--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="app_version">App version</string>
     <string name="no_messages_yet">No messages yet</string>
     <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
+    <string name="url_must_begin_with_http_or_https">URL must begin with http:// or https://</string>
 </resources>
