--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <string name="subscribe">Подписаться</string>
     <string name="loading">Загрузка...</string>
     <string name="close_list_of_messages_history">Закрыть список сообщений</string>
-    <string name="sms_service_is_running_with_ip">SMS Сервис работает на IP %1$s:%2$s</string>
+    <string name="with_ip">SMS Сервис работает на IP %1$s:%2$s</string>
     <string name="sms_service_is_running">SMS Сервис работает</string>
     <string name="network_connection_unavailable">Подключение к интернету недоступно</string>
 </resources>
