added logic for info screen, reduced functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="with_ip">IP %1$s:%2$s</string>
     <string name="sms_service_is_running">SMS Service is running</string>
     <string name="network_connection_unavailable">Network connection unavailable</string>
+    <string name="email_subject">Email about SMS Service, version %s</string>
+    <string name="app_version">App version %s</string>
     <string name="unable_to_create_service_please_change_port_and_try_again">Unable to start service. Please, change PORT and try again!</string>
     <string name="main">Main</string>
     <string name="info">Info</string>
@@ -20,7 +22,6 @@
     <string name="app_theme">App theme</string>
     <string name="rate_this_app">Rate this app</string>
     <string name="write_email_to_developers">Write email to developers</string>
-    <string name="app_version">App version</string>
     <string name="no_messages_yet">No messages yet</string>
     <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
     <string name="url_must_begin_with_http_or_https">URL must begin with http:// or https://</string>
