--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
     <string name="url_must_begin_with_http_or_https">URL must begin with http:// or https://</string>
     <string name="unable_to_get_ip_address">Unable to get IP Address</string>
-    <string name="service_will_stop_after_3_hours">Service will stop after 3 hours</string>
+    <string name="service_will_stop_after_hours">Service will stop after %d hours</string>
     <string name="please_watch_ads_or_buy_a_subscription_to_continue_service_work">Please, watch ads or buy a subscription to continue service work</string>
     <string name="remind_later">Remind later</string>
     <string name="this_message_was_not_sent_to_the_server_tap_to_send">This message was not sent to the server. Tap to send.</string>
