--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">sms_modem</string>
     <string name="settings">Einstellungen</string>
     <string name="enable">Anmachen</string>
     <string name="disable">Abschalten</string>
@@ -10,7 +9,35 @@
     <string name="subscribe">Abonnieren</string>
     <string name="loading">Laden...</string>
     <string name="close_list_of_messages_history">Liste der Nachrichten schließen</string>
-    <string name="with_ip">SMS-Dienst läuft mit IP %1$s:%2$s</string>
     <string name="sms_service_is_running">"Der SMS-Dienst läuft "</string>
     <string name="network_connection_unavailable">Netzwerkverbindung nicht verfügbar</string>
+    <string name="email_subject">E-Mail über SMS Modem App, Version %s</string>
+    <string name="app_version">App-Version</string>
+    <string name="unable_to_create_service_please_change_port_and_try_again">Der Dienst kann nicht gestartet werden. Bitte, ändern Sie den PORT und versuchen Sie es erneut!</string>
+    <string name="main">Hauptseite</string>
+    <string name="info">Infos</string>
+    <string name="messages">Nachrichten</string>
+    <string name="write_email_to_developers">E-Mail an Entwickler schreiben</string>
+    <string name="no_messages_yet">Noch keine Nachrichten</string>
+    <string name="unable_to_start_service_please_watch_ads">Der Dienst kann nicht gestartet werden. Bitte, sehen Sie sich die Werbung an</string>
+    <string name="url_must_begin_with_http_or_https">Die URL muss mit http:// oder https:// beginnen</string>
+    <string name="unable_to_get_ip_address">IP-Adresse kann nicht abgerufen werden</string>
+    <string name="service_will_stop_after_hours">SMS Modem wird nach %d Std. beendet.</string>
+    <string name="please_watch_ads_or_buy_a_subscription_to_continue_service_work">Bitte, sehen Sie sich die Werbung an oder kaufen Sie ein Abonnement, um die Arbeit fortzusetzen.</string>
+    <string name="remind_later">Später erinnern</string>
+    <string name="this_message_was_not_sent_to_the_server_tap_to_send">Diese Nachricht wurde nicht an den Server gesendet. Tippen Sie zum Senden auf .</string>
+    <string name="remind_notification">Benachrichtigung zur Erinnerung</string>
+    <string name="service_settings">Diensteinstellungen</string>
+    <string name="confirm">Bestätigen Sie</string>
+    <string name="cancel">Abbrechen</string>
+    <string name="_3_hours">3 Stunden</string>
+    <string name="_6_hours">6 Stunden</string>
+    <string name="_9_hours">9 Stunden</string>
+    <string name="_12_hours">12 Stunden</string>
+    <string name="delete_messages_history">Nachrichtenverlauf löschen</string>
+    <string name="are_you_sure_it_will_delete_all_messages_on_message_screen">Sind Sie sicher? Es werden alle Nachrichten auf dem Nachrichtenbildschirm gelöscht.</string>
+    <string name="subscription_is_not_connected">Abonnement ist nicht verbunden</string>
+    <string name="watch_ad">Anzeige ansehen</string>
+    <string name="subscription_error">Das bedeutet, dass Sie die App erst nutzen können, nachdem Sie Werbung gesehen haben. Mit 5 Vollbildanzeigen haben Sie 24 Stunden lang Zugriff auf die Funktionen der App. Sie können bis zu 72 Stunden Zugriffszeit ansammeln. Mit einem Abonnement werden diese Einschränkungen aufgehoben und die Werbung aus der App entfernt.</string>
+    <string name="notification_settings_hint">Legen Sie die Zeit bis zum Ende des Dienstes fest, in der eine Push-Benachrichtigung gesendet wird, um Sie daran zu erinnern, die Werbung zu sehen</string>
 </resources>
