--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">sms_modem</string>
     <string name="settings">Settings</string>
     <string name="enable">Turn on</string>
     <string name="disable">Turn off</string>
@@ -10,7 +9,35 @@
     <string name="subscribe">Subscribe</string>
     <string name="loading">Loading...</string>
     <string name="close_list_of_messages_history">Close list of messages</string>
-    <string name="with_ip">SMS Service is running with IP %1$s:%2$s</string>
     <string name="sms_service_is_running">SMS Service is running</string>
     <string name="network_connection_unavailable">Network connection unavailable</string>
+    <string name="email_subject">Email about SMS Modem, version %s</string>
+    <string name="app_version">App version %s</string>
+    <string name="unable_to_create_service_please_change_port_and_try_again">Unable to start service. Please, change PORT and try again!</string>
+    <string name="main">Main</string>
+    <string name="info">Info</string>
+    <string name="messages">Messages</string>
+    <string name="write_email_to_developers">Write email to developers</string>
+    <string name="no_messages_yet">No messages yet</string>
+    <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
+    <string name="url_must_begin_with_http_or_https">URL must begin with http:// or https://</string>
+    <string name="unable_to_get_ip_address">Unable to get IP Address</string>
+    <string name="service_will_stop_after_hours">Service will stop after %d hours</string>
+    <string name="please_watch_ads_or_buy_a_subscription_to_continue_service_work">Please, watch ads or buy a subscription to continue service work</string>
+    <string name="remind_later">Remind later</string>
+    <string name="this_message_was_not_sent_to_the_server_tap_to_send">This message was not sent to the server. Tap to send.</string>
+    <string name="remind_notification">Reminder notification</string>
+    <string name="service_settings">Service settings</string>
+    <string name="confirm">Confirmer</string>
+    <string name="cancel">Cancel</string>
+    <string name="_3_hours">3 hours</string>
+    <string name="_6_hours">6 hours</string>
+    <string name="_9_hours">9 hours</string>
+    <string name="_12_hours">12 hours</string>
+    <string name="delete_messages_history">Delete messages history</string>
+    <string name="are_you_sure_it_will_delete_all_messages_on_message_screen">Are you sure? It will delete all messages on Message screen.</string>
+    <string name="subscription_is_not_connected">Subscription is not connected</string>
+    <string name="watch_ad">Watch ad</string>
+    <string name="subscription_error">It means that you can use app only after watching ads. 5 full-screen ads give you 24 hours access to the app\'s functionality. You can accumulate access time up to 72 hours. Subscription removes these restrictions and removes ads from the app.</string>
+    <string name="notification_settings_hint">Set the time until the end of the service, when a push notification will be sent to remind you to watch ads</string>
 </resources>
