--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">sms_modem</string>
+    <string name="app_name" translatable="false">SMS Modem</string>
     <string name="colon_port" translatable="false">:%d</string>
     <string name="settings">Settings</string>
     <string name="enable">Turn on</string>
@@ -10,17 +10,17 @@
     <string name="subscribe">Subscribe</string>
     <string name="loading">Loading...</string>
     <string name="close_list_of_messages_history">Close list of messages</string>
-    <string name="with_ip">IP %1$s:%2$s</string>
+    <string name="with_ip" translatable="false">IP %1$s:%2$s</string>
     <string name="sms_service_is_running">SMS Service is running</string>
     <string name="network_connection_unavailable">Network connection unavailable</string>
-    <string name="email_subject">Email about SMS Service, version %s</string>
+    <string name="email_subject">Email about SMS Modem, version %s</string>
     <string name="app_version">App version %s</string>
     <string name="unable_to_create_service_please_change_port_and_try_again">Unable to start service. Please, change PORT and try again!</string>
     <string name="main">Main</string>
     <string name="info">Info</string>
     <string name="messages">Messages</string>
-    <string name="app_theme">App theme</string>
-    <string name="rate_this_app">Rate this app</string>
+    <string name="app_theme" translatable="false">App theme</string>
+    <string name="rate_this_app" translatable="false">Rate this app</string>
     <string name="write_email_to_developers">Write email to developers</string>
     <string name="no_messages_yet">No messages yet</string>
     <string name="unable_to_start_service_please_watch_ads">Unable to start service. Please, watch ads</string>
@@ -42,5 +42,6 @@
     <string name="are_you_sure_it_will_delete_all_messages_on_message_screen">Are you sure? It will delete all messages on Message screen.</string>
     <string name="subscription_is_not_connected">Subscription is not connected</string>
     <string name="watch_ad">Watch ad</string>
-    <string name="subscription_error">It means that you can use app only after watching ads. 5 full-screen ads give you 24 hours of access to the app\'s functionality. You can accumulate access time up to 72 hours. \nSubscription removes these restrictions and removes ads from the app.\nTo subscribe or view ads, click the buttons below</string>
+    <string name="subscription_error">It means that you can use app only after watching ads. 5 full-screen ads give you 24 hours access to the app\'s functionality. You can accumulate access time up to 72 hours.\nSubscription removes these restrictions and removes ads from the app.\nTo subscribe or view ads, click the buttons below</string>
+    <string name="notification_settings_hint">Set the time until the end of the service, when a push notification will be sent to remind you to watch ads</string>
 </resources>
