--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,7 +28,7 @@
     <string name="this_message_was_not_sent_to_the_server_tap_to_send">This message was not sent to the server. Tap to send.</string>
     <string name="remind_notification">Reminder notification</string>
     <string name="service_settings">Service settings</string>
-    <string name="confirm">Confirmer</string>
+    <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="_3_hours">3 hours</string>
     <string name="_6_hours">6 hours</string>
@@ -38,6 +38,6 @@
     <string name="are_you_sure_it_will_delete_all_messages_on_message_screen">Are you sure? It will delete all messages on Message screen.</string>
     <string name="subscription_is_not_connected">Subscription is not connected</string>
     <string name="watch_ad">Watch ad</string>
-    <string name="subscription_error">It means that you can use app only after watching ads. 5 full-screen ads give you 24 hours access to the app\'s functionality. You can accumulate access time up to 72 hours. Subscription removes these restrictions and removes ads from the app.</string>
+    <string name="subscription_error">It means that you can use app only after watching ads. 3 full-screen ads give you 24 hours access to the app\'s functionality. You can accumulate access time up to 72 hours. Subscription removes these restrictions and removes ads from the app.</string>
     <string name="notification_settings_hint">Set the time until the end of the service, when a push notification will be sent to remind you to watch ads</string>
 </resources>
