--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,4 +40,6 @@
     <string name="watch_ad">Anzeige ansehen</string>
     <string name="subscription_error">Das bedeutet, dass Sie die App erst nutzen können, nachdem Sie Werbung gesehen haben. Mit 2 Vollbildanzeigen haben Sie 24 Stunden lang Zugriff auf die Funktionen der App. Sie können bis zu 72 Stunden Zugriffszeit ansammeln. Mit einem Abonnement werden diese Einschränkungen aufgehoben und die Werbung aus der App entfernt.</string>
     <string name="notification_settings_hint">Legen Sie die Zeit bis zum Ende des Dienstes fest, in der eine Push-Benachrichtigung gesendet wird, um Sie daran zu erinnern, die Werbung zu sehen</string>
+    <string name="ad">Ad</string>
+    <string name="buy">Kaufen</string>
 </resources>
