--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,4 +40,6 @@
     <string name="watch_ad">Voir l\'annonce</string>
     <string name="subscription_error">Cela signifie que vous ne pouvez utiliser l\'application qu\'après avoir regardé les publicités. 2 publicités en plein écran vous donnent accès aux fonctionnalités de l\'application pendant 24 heures. Vous pouvez accumuler du temps d\'accès jusqu\'à 72 heures. L\'abonnement lève ces restrictions et supprime les publicités de l\'application.</string>
     <string name="notification_settings_hint">Définir le délai jusqu\'à la fin du service, lorsqu\'une notification push sera envoyée pour vous rappeler de regarder les publicités.</string>
+    <string name="ad">Ad</string>
+    <string name="buy">Acheter</string>
 </resources>
