--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,4 +40,6 @@
     <string name="watch_ad">Смотреть рекламу</string>
     <string name="subscription_error">Это значит, что пользоваться приложением можно только после просмотра рекламы. 2 полноэкранных объявлений дают 24 часа доступа к функциям приложения. Вы можете накапливать время доступа до 72 часов. Подписка снимает эти ограничения и убирает рекламу из приложения.</string>
     <string name="notification_settings_hint">Установите время до окончания работы сервиса, когда будет отправлено push-уведомление с напоминанием о необходимости просмотра рекламы</string>
+    <string name="ad">Реклама</string>
+    <string name="buy">Купить</string>
 </resources>
