--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -42,4 +42,6 @@
     <string name="notification_settings_hint">Set the time until the end of the service, when a push notification will be sent to remind you to watch ads</string>
     <string name="ad">Ad</string>
     <string name="buy">Buy</string>
+    <string name="unable_to_start_service_please_check_your_internet_connection">Unable to start service. Please, check your internet connection.</string>
+    <string name="please_note_you_are_not_connected_to_the_internet">Please note, you are not connected to the internet!</string>
 </resources>
