--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,22 +48,23 @@
     <string name="buy">Buy</string>
     <string name="app_requires_permissions">App requires permissions</string>
     <string name="this_app_is_made_primarily_for_startups_its_main_functionality_is_to_send_sms_messages_using_a_request_from_the_server_as_well_as_to_send_a_request_to_the_server_with_information_about_the_sms_message_that_came_to_the_phone_nthis_functionality_requires_access_to_receive_read_and_send_sms_messages_as_well_as_to_send_notifications_to_this_device_so_that_the_user_knows_when_the_application_is_running_nthese_permissions_will_be_requested_after_clicking_on_the_confirm_button">This app is made primarily for startups. Its main functionality is to send SMS messages using a request from the server, as well as to send a request to the server with information about the SMS message that came to the phone. This functionality requires access to receive, read and send SMS messages, as well as to send notifications to this device so that the user knows when the application is running. These permissions will be requested after clicking on the \'Confirm\' button.</string>
-    <string name="please_note_you_are_not_connected_to_the_internet">Please note, you are not connected to the internet!</string>
+    <string name="please_note_you_are_not_connected_to_the_internet">Please note, you are probably not connected to the internet!</string>
     <string name="stop_service">Stop service</string>
     <string name="sms_modem_service_has_stopped_working">SMS Modem service has stopped working</string>
-    <string name="choose_your_subscription_plan">Choose your subscription plan</string>
-    <string name="annual">Annual</string>
-    <string name="_3_months">3 Months</string>
-    <string name="monthly">Monthly</string>
-    <string name="subscribe_now">Subscribe Now</string>
-    <string name="already_purchased">Already Purchased?</string>
-    <string name="terms_conditions_underline"><u><![CDATA[Terms&Conditions]]></u></string>
-    <string name="privacy_policy_underline"><u>Privacy Policy</u></string>
-    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
-    <string name="first_term">- SMS Modem subscription is billed monthly, seasonally (3-months) or annualy at the rate corresponding to the selected plan.</string>
-    <string name="second_term">- Subscription auto-renews before the end of the current period, unless canceled 24-hours in advance.</string>
-    <string name="third_term">- You may manage your subscriptions and turned off auto-renewal from your Google Play Store account settings.</string>
-    <string name="forth_term">- If you cancel a subscription purchased from an app on Google Play, you will not receive a refund for the current billing period, but will continue to receive their subscription content for the remainder of the current billing period, regardless of the cancellation date. The cancellation goes into effect after the current billing period has passed.</string>
-    <string name="hot">Hot</string>
-    <string name="popular">Popular</string>
+    <string name="choose_your_subscription_plan" translatable="false">Choose your subscription plan</string>
+    <string name="annual" translatable="false">Annual</string>
+    <string name="_3_months" translatable="false">3 Months</string>
+    <string name="monthly" translatable="false">Monthly</string>
+    <string name="subscribe_now" translatable="false">Subscribe Now</string>
+    <string name="already_purchased" translatable="false">Already Purchased?</string>
+    <string name="terms_conditions_underline" translatable="false"><u><![CDATA[Terms&Conditions]]></u></string>
+    <string name="privacy_policy_underline" translatable="false"><u>Privacy Policy</u></string>
+    <string name="terms_conditions" translatable="false"><![CDATA[Terms & Conditions]]></string>
+    <string name="first_term" translatable="false">- SMS Modem subscription is billed monthly, seasonally (3-months) or annualy at the rate corresponding to the selected plan.</string>
+    <string name="second_term" translatable="false">- Subscription auto-renews before the end of the current period, unless canceled 24-hours in advance.</string>
+    <string name="third_term" translatable="false">- You may manage your subscriptions and turned off auto-renewal from your Google Play Store account settings.</string>
+    <string name="forth_term" translatable="false">- If you cancel a subscription purchased from an app on Google Play, you will not receive a refund for the current billing period, but will continue to receive their subscription content for the remainder of the current billing period, regardless of the cancellation date. The cancellation goes into effect after the current billing period has passed.</string>
+    <string name="hot" translatable="false">Hot</string>
+    <string name="popular" translatable="false">Popular</string>
+    <string name="sorry_this_section_is_not_available_yet">Sorry, this section is not available yet</string>
 </resources>
