added guide dialog

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -48,4 +48,10 @@
     <string name="stop_service">Dienst anhalten</string>
     <string name="sms_modem_service_has_stopped_working">Der Dienst funktioniert nicht mehr</string>
     <string name="sorry_this_section_is_not_available_yet">Entschuldigung, dieser Bereich ist noch nicht verfügbar</string>
+    <string name="how_to_use">Wie wird es verwendet?</string>
+    <string name="your_request_to_send_an_sms_message">Ihre Anfrage zum Senden einer SMS-Nachricht:</string>
+    <string name="send_message_request">%1$s:%2$s/Empfänger_Zell_Nummer/Nachrichtentext</string>
+    <string name="how_to_use_guide">Auf dem Hauptbildschirm sehen Sie die IP-Adresse, mit der Ihr Gerät verbunden ist, und den Port, den Sie selbst in den Einstellungen konfigurieren können. Mit dieser IP-Adresse und dem Port können Sie eine Anfrage in der Form \"ip:port/empfänger-telefonnummer/nachrichtentext\" senden, und diese Nachricht wird von Ihrem Smartphone entsprechend den in der Anfrage angegebenen Daten gesendet. Außerdem kann die Anwendung eine Anfrage an den Server unter der URL-Adresse senden, die Sie in den Einstellungen im Format \"Ihre-URL-Adresse/Absender-Telefonnummer/Nachrichtentext/\" angeben.</string>
+    <string name="address_send_received_message">%1$s/sender_cell_numéro/Nachrichtentext</string>
+    <string name="address_to_which_the_application_will_send_received_sms_messages">Adresse, an die die Anwendung empfangene SMS-Nachrichten senden wird</string>
 </resources>
